// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checks/cargo-clippy converts buggy cargo-clippy 1`] = `
Object {
  "completed_at": Any<String>,
  "conclusion": "skipped",
  "head_sha": "11963e3cb7ecbb9247f638cc0fb047173a62cf7a",
  "name": "cargo-clippy",
  "output": Object {
    "summary": "",
    "title": "Unexpected clippy output",
  },
  "status": "completed",
}
`;

exports[`checks/cargo-clippy converts failed cargo-clippy 1`] = `
Object {
  "completed_at": Any<String>,
  "conclusion": "failure",
  "head_sha": "11963e3cb7ecbb9247f638cc0fb047173a62cf7a",
  "name": "cargo-clippy",
  "output": Object {
    "annotations": Array [
      Object {
        "annotation_level": "failure",
        "end_line": 33,
        "message": "this looks like you are trying to swap \`foo\` and \`bar\`",
        "path": "Cargo.toml",
        "raw_details": "{
    \\"rendered\\": \\"error: this looks like you are trying to swap \`foo\` and \`bar\`\\\\n  --> src/main.rs:32:5\\\\n   |\\\\n32 | /     foo = bar;\\\\n33 | |     bar = foo;\\\\n   | |_____________^ help: try: \`std::mem::swap(&mut foo, &mut bar)\`\\\\n   |\\\\n   = note: \`#[deny(clippy::almost_swapped)]\` on by default\\\\n   = note: or maybe you should use \`std::mem::replace\`?\\\\n   = help: for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#almost_swapped\\\\n\\\\n\\",
    \\"children\\": [
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"note\\",
            \\"message\\": \\"\`#[deny(clippy::almost_swapped)]\` on by default\\",
            \\"rendered\\": null,
            \\"spans\\": []
        },
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"note\\",
            \\"message\\": \\"or maybe you should use \`std::mem::replace\`?\\",
            \\"rendered\\": null,
            \\"spans\\": []
        },
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"help\\",
            \\"message\\": \\"for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#almost_swapped\\",
            \\"rendered\\": null,
            \\"spans\\": []
        },
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"help\\",
            \\"message\\": \\"try\\",
            \\"rendered\\": null,
            \\"spans\\": [
                {
                    \\"byte_end\\": 411,
                    \\"byte_start\\": 387,
                    \\"column_end\\": 14,
                    \\"column_start\\": 5,
                    \\"expansion\\": null,
                    \\"file_name\\": \\"src/main.rs\\",
                    \\"is_primary\\": true,
                    \\"label\\": null,
                    \\"line_end\\": 33,
                    \\"line_start\\": 32,
                    \\"suggested_replacement\\": \\"std::mem::swap(&mut foo, &mut bar)\\",
                    \\"suggestion_applicability\\": \\"MaybeIncorrect\\",
                    \\"text\\": [
                        {
                            \\"highlight_end\\": 15,
                            \\"highlight_start\\": 5,
                            \\"text\\": \\"    foo = bar;\\"
                        },
                        {
                            \\"highlight_end\\": 14,
                            \\"highlight_start\\": 1,
                            \\"text\\": \\"    bar = foo;\\"
                        }
                    ]
                }
            ]
        }
    ],
    \\"code\\": {
        \\"code\\": \\"clippy::almost_swapped\\",
        \\"explanation\\": null
    },
    \\"level\\": \\"error\\",
    \\"message\\": \\"this looks like you are trying to swap \`foo\` and \`bar\`\\",
    \\"spans\\": [
        {
            \\"byte_end\\": 411,
            \\"byte_start\\": 387,
            \\"column_end\\": 14,
            \\"column_start\\": 5,
            \\"expansion\\": null,
            \\"file_name\\": \\"src/main.rs\\",
            \\"is_primary\\": true,
            \\"label\\": null,
            \\"line_end\\": 33,
            \\"line_start\\": 32,
            \\"suggested_replacement\\": null,
            \\"suggestion_applicability\\": null,
            \\"text\\": [
                {
                    \\"highlight_end\\": 15,
                    \\"highlight_start\\": 5,
                    \\"text\\": \\"    foo = bar;\\"
                },
                {
                    \\"highlight_end\\": 14,
                    \\"highlight_start\\": 1,
                    \\"text\\": \\"    bar = foo;\\"
                }
            ]
        }
    ]
}",
        "start_line": 32,
      },
      Object {
        "annotation_level": "failure",
        "end_line": 15,
        "message": "use of a blacklisted/placeholder name \`foo\`",
        "path": "Cargo.toml",
        "raw_details": "{
    \\"rendered\\": \\"warning: use of a blacklisted/placeholder name \`foo\`\\\\n  --> src/main.rs:15:11\\\\n   |\\\\n15 |       let foo = foo();\\\\n   |           ^^^\\\\n   |\\\\n   = note: \`#[warn(clippy::blacklisted_name)]\` on by default\\\\n   = help: for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#blacklisted_name\\\\n\\\\n\\",
    \\"children\\": [
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"note\\",
            \\"message\\": \\"\`#[warn(clippy::blacklisted_name)]\` on by default\\",
            \\"rendered\\": null,
            \\"spans\\": []
        },
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"help\\",
            \\"message\\": \\"for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#blacklisted_name\\",
            \\"rendered\\": null,
            \\"spans\\": []
        }
    ],
    \\"code\\": {
        \\"code\\": \\"clippy::blacklisted_name\\",
        \\"explanation\\": null
    },
    \\"level\\": \\"warning\\",
    \\"message\\": \\"use of a blacklisted/placeholder name \`foo\`\\",
    \\"spans\\": [
        {
            \\"byte_end\\": 160,
            \\"byte_start\\": 157,
            \\"column_end\\": 14,
            \\"column_start\\": 11,
            \\"expansion\\": null,
            \\"file_name\\": \\"src/main.rs\\",
            \\"is_primary\\": true,
            \\"label\\": null,
            \\"line_end\\": 15,
            \\"line_start\\": 15,
            \\"suggested_replacement\\": null,
            \\"suggestion_applicability\\": null,
            \\"text\\": [
                {
                    \\"highlight_end\\": 14,
                    \\"highlight_start\\": 11,
                    \\"text\\": \\"      let foo = foo();\\"
                }
            ]
        }
    ]
}",
        "start_line": 15,
      },
      Object {
        "annotation_level": "failure",
        "end_line": 29,
        "message": "use of a blacklisted/placeholder name \`foo\`",
        "path": "Cargo.toml",
        "raw_details": "{
    \\"rendered\\": \\"warning: use of a blacklisted/placeholder name \`foo\`\\\\n  --> src/main.rs:29:13\\\\n   |\\\\n29 |     let mut foo = 0;\\\\n   |             ^^^\\\\n   |\\\\n   = help: for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#blacklisted_name\\\\n\\\\n\\",
    \\"children\\": [
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"help\\",
            \\"message\\": \\"for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#blacklisted_name\\",
            \\"rendered\\": null,
            \\"spans\\": []
        }
    ],
    \\"code\\": {
        \\"code\\": \\"clippy::blacklisted_name\\",
        \\"explanation\\": null
    },
    \\"level\\": \\"warning\\",
    \\"message\\": \\"use of a blacklisted/placeholder name \`foo\`\\",
    \\"spans\\": [
        {
            \\"byte_end\\": 355,
            \\"byte_start\\": 352,
            \\"column_end\\": 16,
            \\"column_start\\": 13,
            \\"expansion\\": null,
            \\"file_name\\": \\"src/main.rs\\",
            \\"is_primary\\": true,
            \\"label\\": null,
            \\"line_end\\": 29,
            \\"line_start\\": 29,
            \\"suggested_replacement\\": null,
            \\"suggestion_applicability\\": null,
            \\"text\\": [
                {
                    \\"highlight_end\\": 16,
                    \\"highlight_start\\": 13,
                    \\"text\\": \\"    let mut foo = 0;\\"
                }
            ]
        }
    ]
}",
        "start_line": 29,
      },
      Object {
        "annotation_level": "failure",
        "end_line": 37,
        "message": "in an \`if\` condition, avoid complex blocks or closures with blocks; instead, move the block or closure higher and bind it with a \`let\`",
        "path": "Cargo.toml",
        "raw_details": "{
    \\"rendered\\": \\"warning: in an \`if\` condition, avoid complex blocks or closures with blocks; instead, move the block or closure higher and bind it with a \`let\`\\\\n  --> src/main.rs:37:5\\\\n   |\\\\n37 |     if { let b = false; b } {}\\\\n   |     ^^^^^^^^^^^^^^^^^^^^^^^ help: try: \`let res = { let b = false; b }; if res\`\\\\n   |\\\\n   = note: \`#[warn(clippy::blocks_in_if_conditions)]\` on by default\\\\n   = help: for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#blocks_in_if_conditions\\\\n\\\\n\\",
    \\"children\\": [
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"note\\",
            \\"message\\": \\"\`#[warn(clippy::blocks_in_if_conditions)]\` on by default\\",
            \\"rendered\\": null,
            \\"spans\\": []
        },
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"help\\",
            \\"message\\": \\"for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#blocks_in_if_conditions\\",
            \\"rendered\\": null,
            \\"spans\\": []
        },
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"help\\",
            \\"message\\": \\"try\\",
            \\"rendered\\": null,
            \\"spans\\": [
                {
                    \\"byte_end\\": 443,
                    \\"byte_start\\": 420,
                    \\"column_end\\": 28,
                    \\"column_start\\": 5,
                    \\"expansion\\": null,
                    \\"file_name\\": \\"src/main.rs\\",
                    \\"is_primary\\": true,
                    \\"label\\": null,
                    \\"line_end\\": 37,
                    \\"line_start\\": 37,
                    \\"suggested_replacement\\": \\"let res = { let b = false; b }; if res\\",
                    \\"suggestion_applicability\\": \\"MachineApplicable\\",
                    \\"text\\": [
                        {
                            \\"highlight_end\\": 28,
                            \\"highlight_start\\": 5,
                            \\"text\\": \\"    if { let b = false; b } {}\\"
                        }
                    ]
                }
            ]
        }
    ],
    \\"code\\": {
        \\"code\\": \\"clippy::blocks_in_if_conditions\\",
        \\"explanation\\": null
    },
    \\"level\\": \\"warning\\",
    \\"message\\": \\"in an \`if\` condition, avoid complex blocks or closures with blocks; instead, move the block or closure higher and bind it with a \`let\`\\",
    \\"spans\\": [
        {
            \\"byte_end\\": 443,
            \\"byte_start\\": 420,
            \\"column_end\\": 28,
            \\"column_start\\": 5,
            \\"expansion\\": null,
            \\"file_name\\": \\"src/main.rs\\",
            \\"is_primary\\": true,
            \\"label\\": null,
            \\"line_end\\": 37,
            \\"line_start\\": 37,
            \\"suggested_replacement\\": null,
            \\"suggestion_applicability\\": null,
            \\"text\\": [
                {
                    \\"highlight_end\\": 28,
                    \\"highlight_start\\": 5,
                    \\"text\\": \\"    if { let b = false; b } {}\\"
                }
            ]
        }
    ]
}",
        "start_line": 37,
      },
      Object {
        "annotation_level": "failure",
        "end_line": 37,
        "message": "returning the result of a \`let\` binding from a block",
        "path": "Cargo.toml",
        "raw_details": "{
    \\"rendered\\": \\"warning: returning the result of a \`let\` binding from a block\\\\n  --> src/main.rs:37:25\\\\n   |\\\\n37 |     if { let b = false; b } {}\\\\n   |          -------------- ^\\\\n   |          |\\\\n   |          unnecessary \`let\` binding\\\\n   |\\\\n   = note: \`#[warn(clippy::let_and_return)]\` on by default\\\\n   = help: for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#let_and_return\\\\nhelp: return the expression directly\\\\n   |\\\\n37 |     if {  false } {}\\\\n   |         --^^^^^\\\\n\\\\n\\",
    \\"children\\": [
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"note\\",
            \\"message\\": \\"\`#[warn(clippy::let_and_return)]\` on by default\\",
            \\"rendered\\": null,
            \\"spans\\": []
        },
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"help\\",
            \\"message\\": \\"for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#let_and_return\\",
            \\"rendered\\": null,
            \\"spans\\": []
        },
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"help\\",
            \\"message\\": \\"return the expression directly\\",
            \\"rendered\\": null,
            \\"spans\\": [
                {
                    \\"byte_end\\": 439,
                    \\"byte_start\\": 425,
                    \\"column_end\\": 24,
                    \\"column_start\\": 10,
                    \\"expansion\\": null,
                    \\"file_name\\": \\"src/main.rs\\",
                    \\"is_primary\\": true,
                    \\"label\\": null,
                    \\"line_end\\": 37,
                    \\"line_start\\": 37,
                    \\"suggested_replacement\\": \\"\\",
                    \\"suggestion_applicability\\": \\"MachineApplicable\\",
                    \\"text\\": [
                        {
                            \\"highlight_end\\": 24,
                            \\"highlight_start\\": 10,
                            \\"text\\": \\"    if { let b = false; b } {}\\"
                        }
                    ]
                },
                {
                    \\"byte_end\\": 441,
                    \\"byte_start\\": 440,
                    \\"column_end\\": 26,
                    \\"column_start\\": 25,
                    \\"expansion\\": null,
                    \\"file_name\\": \\"src/main.rs\\",
                    \\"is_primary\\": true,
                    \\"label\\": null,
                    \\"line_end\\": 37,
                    \\"line_start\\": 37,
                    \\"suggested_replacement\\": \\"false\\",
                    \\"suggestion_applicability\\": \\"MachineApplicable\\",
                    \\"text\\": [
                        {
                            \\"highlight_end\\": 26,
                            \\"highlight_start\\": 25,
                            \\"text\\": \\"    if { let b = false; b } {}\\"
                        }
                    ]
                }
            ]
        }
    ],
    \\"code\\": {
        \\"code\\": \\"clippy::let_and_return\\",
        \\"explanation\\": null
    },
    \\"level\\": \\"warning\\",
    \\"message\\": \\"returning the result of a \`let\` binding from a block\\",
    \\"spans\\": [
        {
            \\"byte_end\\": 439,
            \\"byte_start\\": 425,
            \\"column_end\\": 24,
            \\"column_start\\": 10,
            \\"expansion\\": null,
            \\"file_name\\": \\"src/main.rs\\",
            \\"is_primary\\": false,
            \\"label\\": \\"unnecessary \`let\` binding\\",
            \\"line_end\\": 37,
            \\"line_start\\": 37,
            \\"suggested_replacement\\": null,
            \\"suggestion_applicability\\": null,
            \\"text\\": [
                {
                    \\"highlight_end\\": 24,
                    \\"highlight_start\\": 10,
                    \\"text\\": \\"    if { let b = false; b } {}\\"
                }
            ]
        },
        {
            \\"byte_end\\": 441,
            \\"byte_start\\": 440,
            \\"column_end\\": 26,
            \\"column_start\\": 25,
            \\"expansion\\": null,
            \\"file_name\\": \\"src/main.rs\\",
            \\"is_primary\\": true,
            \\"label\\": null,
            \\"line_end\\": 37,
            \\"line_start\\": 37,
            \\"suggested_replacement\\": null,
            \\"suggestion_applicability\\": null,
            \\"text\\": [
                {
                    \\"highlight_end\\": 26,
                    \\"highlight_start\\": 25,
                    \\"text\\": \\"    if { let b = false; b } {}\\"
                }
            ]
        }
    ]
}",
        "start_line": 37,
      },
      Object {
        "annotation_level": "failure",
        "end_line": 33,
        "message": "this looks like you are trying to swap \`foo\` and \`bar\`",
        "path": "Cargo.toml",
        "raw_details": "{
    \\"rendered\\": \\"error: this looks like you are trying to swap \`foo\` and \`bar\`\\\\n  --> src/main.rs:32:5\\\\n   |\\\\n32 | /     foo = bar;\\\\n33 | |     bar = foo;\\\\n   | |_____________^ help: try: \`std::mem::swap(&mut foo, &mut bar)\`\\\\n   |\\\\n   = note: \`#[deny(clippy::almost_swapped)]\` on by default\\\\n   = note: or maybe you should use \`std::mem::replace\`?\\\\n   = help: for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#almost_swapped\\\\n\\\\n\\",
    \\"children\\": [
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"note\\",
            \\"message\\": \\"\`#[deny(clippy::almost_swapped)]\` on by default\\",
            \\"rendered\\": null,
            \\"spans\\": []
        },
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"note\\",
            \\"message\\": \\"or maybe you should use \`std::mem::replace\`?\\",
            \\"rendered\\": null,
            \\"spans\\": []
        },
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"help\\",
            \\"message\\": \\"for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#almost_swapped\\",
            \\"rendered\\": null,
            \\"spans\\": []
        },
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"help\\",
            \\"message\\": \\"try\\",
            \\"rendered\\": null,
            \\"spans\\": [
                {
                    \\"byte_end\\": 411,
                    \\"byte_start\\": 387,
                    \\"column_end\\": 14,
                    \\"column_start\\": 5,
                    \\"expansion\\": null,
                    \\"file_name\\": \\"src/main.rs\\",
                    \\"is_primary\\": true,
                    \\"label\\": null,
                    \\"line_end\\": 33,
                    \\"line_start\\": 32,
                    \\"suggested_replacement\\": \\"std::mem::swap(&mut foo, &mut bar)\\",
                    \\"suggestion_applicability\\": \\"MaybeIncorrect\\",
                    \\"text\\": [
                        {
                            \\"highlight_end\\": 15,
                            \\"highlight_start\\": 5,
                            \\"text\\": \\"    foo = bar;\\"
                        },
                        {
                            \\"highlight_end\\": 14,
                            \\"highlight_start\\": 1,
                            \\"text\\": \\"    bar = foo;\\"
                        }
                    ]
                }
            ]
        }
    ],
    \\"code\\": {
        \\"code\\": \\"clippy::almost_swapped\\",
        \\"explanation\\": null
    },
    \\"level\\": \\"error\\",
    \\"message\\": \\"this looks like you are trying to swap \`foo\` and \`bar\`\\",
    \\"spans\\": [
        {
            \\"byte_end\\": 411,
            \\"byte_start\\": 387,
            \\"column_end\\": 14,
            \\"column_start\\": 5,
            \\"expansion\\": null,
            \\"file_name\\": \\"src/main.rs\\",
            \\"is_primary\\": true,
            \\"label\\": null,
            \\"line_end\\": 33,
            \\"line_start\\": 32,
            \\"suggested_replacement\\": null,
            \\"suggestion_applicability\\": null,
            \\"text\\": [
                {
                    \\"highlight_end\\": 15,
                    \\"highlight_start\\": 5,
                    \\"text\\": \\"    foo = bar;\\"
                },
                {
                    \\"highlight_end\\": 14,
                    \\"highlight_start\\": 1,
                    \\"text\\": \\"    bar = foo;\\"
                }
            ]
        }
    ]
}",
        "start_line": 32,
      },
      Object {
        "annotation_level": "failure",
        "end_line": 15,
        "message": "use of a blacklisted/placeholder name \`foo\`",
        "path": "Cargo.toml",
        "raw_details": "{
    \\"rendered\\": \\"warning: use of a blacklisted/placeholder name \`foo\`\\\\n  --> src/main.rs:15:11\\\\n   |\\\\n15 |       let foo = foo();\\\\n   |           ^^^\\\\n   |\\\\n   = note: \`#[warn(clippy::blacklisted_name)]\` on by default\\\\n   = help: for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#blacklisted_name\\\\n\\\\n\\",
    \\"children\\": [
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"note\\",
            \\"message\\": \\"\`#[warn(clippy::blacklisted_name)]\` on by default\\",
            \\"rendered\\": null,
            \\"spans\\": []
        },
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"help\\",
            \\"message\\": \\"for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#blacklisted_name\\",
            \\"rendered\\": null,
            \\"spans\\": []
        }
    ],
    \\"code\\": {
        \\"code\\": \\"clippy::blacklisted_name\\",
        \\"explanation\\": null
    },
    \\"level\\": \\"warning\\",
    \\"message\\": \\"use of a blacklisted/placeholder name \`foo\`\\",
    \\"spans\\": [
        {
            \\"byte_end\\": 160,
            \\"byte_start\\": 157,
            \\"column_end\\": 14,
            \\"column_start\\": 11,
            \\"expansion\\": null,
            \\"file_name\\": \\"src/main.rs\\",
            \\"is_primary\\": true,
            \\"label\\": null,
            \\"line_end\\": 15,
            \\"line_start\\": 15,
            \\"suggested_replacement\\": null,
            \\"suggestion_applicability\\": null,
            \\"text\\": [
                {
                    \\"highlight_end\\": 14,
                    \\"highlight_start\\": 11,
                    \\"text\\": \\"      let foo = foo();\\"
                }
            ]
        }
    ]
}",
        "start_line": 15,
      },
      Object {
        "annotation_level": "failure",
        "end_line": 29,
        "message": "use of a blacklisted/placeholder name \`foo\`",
        "path": "Cargo.toml",
        "raw_details": "{
    \\"rendered\\": \\"warning: use of a blacklisted/placeholder name \`foo\`\\\\n  --> src/main.rs:29:13\\\\n   |\\\\n29 |     let mut foo = 0;\\\\n   |             ^^^\\\\n   |\\\\n   = help: for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#blacklisted_name\\\\n\\\\n\\",
    \\"children\\": [
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"help\\",
            \\"message\\": \\"for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#blacklisted_name\\",
            \\"rendered\\": null,
            \\"spans\\": []
        }
    ],
    \\"code\\": {
        \\"code\\": \\"clippy::blacklisted_name\\",
        \\"explanation\\": null
    },
    \\"level\\": \\"warning\\",
    \\"message\\": \\"use of a blacklisted/placeholder name \`foo\`\\",
    \\"spans\\": [
        {
            \\"byte_end\\": 355,
            \\"byte_start\\": 352,
            \\"column_end\\": 16,
            \\"column_start\\": 13,
            \\"expansion\\": null,
            \\"file_name\\": \\"src/main.rs\\",
            \\"is_primary\\": true,
            \\"label\\": null,
            \\"line_end\\": 29,
            \\"line_start\\": 29,
            \\"suggested_replacement\\": null,
            \\"suggestion_applicability\\": null,
            \\"text\\": [
                {
                    \\"highlight_end\\": 16,
                    \\"highlight_start\\": 13,
                    \\"text\\": \\"    let mut foo = 0;\\"
                }
            ]
        }
    ]
}",
        "start_line": 29,
      },
      Object {
        "annotation_level": "failure",
        "end_line": 37,
        "message": "in an \`if\` condition, avoid complex blocks or closures with blocks; instead, move the block or closure higher and bind it with a \`let\`",
        "path": "Cargo.toml",
        "raw_details": "{
    \\"rendered\\": \\"warning: in an \`if\` condition, avoid complex blocks or closures with blocks; instead, move the block or closure higher and bind it with a \`let\`\\\\n  --> src/main.rs:37:5\\\\n   |\\\\n37 |     if { let b = false; b } {}\\\\n   |     ^^^^^^^^^^^^^^^^^^^^^^^ help: try: \`let res = { let b = false; b }; if res\`\\\\n   |\\\\n   = note: \`#[warn(clippy::blocks_in_if_conditions)]\` on by default\\\\n   = help: for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#blocks_in_if_conditions\\\\n\\\\n\\",
    \\"children\\": [
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"note\\",
            \\"message\\": \\"\`#[warn(clippy::blocks_in_if_conditions)]\` on by default\\",
            \\"rendered\\": null,
            \\"spans\\": []
        },
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"help\\",
            \\"message\\": \\"for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#blocks_in_if_conditions\\",
            \\"rendered\\": null,
            \\"spans\\": []
        },
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"help\\",
            \\"message\\": \\"try\\",
            \\"rendered\\": null,
            \\"spans\\": [
                {
                    \\"byte_end\\": 443,
                    \\"byte_start\\": 420,
                    \\"column_end\\": 28,
                    \\"column_start\\": 5,
                    \\"expansion\\": null,
                    \\"file_name\\": \\"src/main.rs\\",
                    \\"is_primary\\": true,
                    \\"label\\": null,
                    \\"line_end\\": 37,
                    \\"line_start\\": 37,
                    \\"suggested_replacement\\": \\"let res = { let b = false; b }; if res\\",
                    \\"suggestion_applicability\\": \\"MachineApplicable\\",
                    \\"text\\": [
                        {
                            \\"highlight_end\\": 28,
                            \\"highlight_start\\": 5,
                            \\"text\\": \\"    if { let b = false; b } {}\\"
                        }
                    ]
                }
            ]
        }
    ],
    \\"code\\": {
        \\"code\\": \\"clippy::blocks_in_if_conditions\\",
        \\"explanation\\": null
    },
    \\"level\\": \\"warning\\",
    \\"message\\": \\"in an \`if\` condition, avoid complex blocks or closures with blocks; instead, move the block or closure higher and bind it with a \`let\`\\",
    \\"spans\\": [
        {
            \\"byte_end\\": 443,
            \\"byte_start\\": 420,
            \\"column_end\\": 28,
            \\"column_start\\": 5,
            \\"expansion\\": null,
            \\"file_name\\": \\"src/main.rs\\",
            \\"is_primary\\": true,
            \\"label\\": null,
            \\"line_end\\": 37,
            \\"line_start\\": 37,
            \\"suggested_replacement\\": null,
            \\"suggestion_applicability\\": null,
            \\"text\\": [
                {
                    \\"highlight_end\\": 28,
                    \\"highlight_start\\": 5,
                    \\"text\\": \\"    if { let b = false; b } {}\\"
                }
            ]
        }
    ]
}",
        "start_line": 37,
      },
      Object {
        "annotation_level": "failure",
        "end_line": 37,
        "message": "returning the result of a \`let\` binding from a block",
        "path": "Cargo.toml",
        "raw_details": "{
    \\"rendered\\": \\"warning: returning the result of a \`let\` binding from a block\\\\n  --> src/main.rs:37:25\\\\n   |\\\\n37 |     if { let b = false; b } {}\\\\n   |          -------------- ^\\\\n   |          |\\\\n   |          unnecessary \`let\` binding\\\\n   |\\\\n   = note: \`#[warn(clippy::let_and_return)]\` on by default\\\\n   = help: for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#let_and_return\\\\nhelp: return the expression directly\\\\n   |\\\\n37 |     if {  false } {}\\\\n   |         --^^^^^\\\\n\\\\n\\",
    \\"children\\": [
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"note\\",
            \\"message\\": \\"\`#[warn(clippy::let_and_return)]\` on by default\\",
            \\"rendered\\": null,
            \\"spans\\": []
        },
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"help\\",
            \\"message\\": \\"for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#let_and_return\\",
            \\"rendered\\": null,
            \\"spans\\": []
        },
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"help\\",
            \\"message\\": \\"return the expression directly\\",
            \\"rendered\\": null,
            \\"spans\\": [
                {
                    \\"byte_end\\": 439,
                    \\"byte_start\\": 425,
                    \\"column_end\\": 24,
                    \\"column_start\\": 10,
                    \\"expansion\\": null,
                    \\"file_name\\": \\"src/main.rs\\",
                    \\"is_primary\\": true,
                    \\"label\\": null,
                    \\"line_end\\": 37,
                    \\"line_start\\": 37,
                    \\"suggested_replacement\\": \\"\\",
                    \\"suggestion_applicability\\": \\"MachineApplicable\\",
                    \\"text\\": [
                        {
                            \\"highlight_end\\": 24,
                            \\"highlight_start\\": 10,
                            \\"text\\": \\"    if { let b = false; b } {}\\"
                        }
                    ]
                },
                {
                    \\"byte_end\\": 441,
                    \\"byte_start\\": 440,
                    \\"column_end\\": 26,
                    \\"column_start\\": 25,
                    \\"expansion\\": null,
                    \\"file_name\\": \\"src/main.rs\\",
                    \\"is_primary\\": true,
                    \\"label\\": null,
                    \\"line_end\\": 37,
                    \\"line_start\\": 37,
                    \\"suggested_replacement\\": \\"false\\",
                    \\"suggestion_applicability\\": \\"MachineApplicable\\",
                    \\"text\\": [
                        {
                            \\"highlight_end\\": 26,
                            \\"highlight_start\\": 25,
                            \\"text\\": \\"    if { let b = false; b } {}\\"
                        }
                    ]
                }
            ]
        }
    ],
    \\"code\\": {
        \\"code\\": \\"clippy::let_and_return\\",
        \\"explanation\\": null
    },
    \\"level\\": \\"warning\\",
    \\"message\\": \\"returning the result of a \`let\` binding from a block\\",
    \\"spans\\": [
        {
            \\"byte_end\\": 439,
            \\"byte_start\\": 425,
            \\"column_end\\": 24,
            \\"column_start\\": 10,
            \\"expansion\\": null,
            \\"file_name\\": \\"src/main.rs\\",
            \\"is_primary\\": false,
            \\"label\\": \\"unnecessary \`let\` binding\\",
            \\"line_end\\": 37,
            \\"line_start\\": 37,
            \\"suggested_replacement\\": null,
            \\"suggestion_applicability\\": null,
            \\"text\\": [
                {
                    \\"highlight_end\\": 24,
                    \\"highlight_start\\": 10,
                    \\"text\\": \\"    if { let b = false; b } {}\\"
                }
            ]
        },
        {
            \\"byte_end\\": 441,
            \\"byte_start\\": 440,
            \\"column_end\\": 26,
            \\"column_start\\": 25,
            \\"expansion\\": null,
            \\"file_name\\": \\"src/main.rs\\",
            \\"is_primary\\": true,
            \\"label\\": null,
            \\"line_end\\": 37,
            \\"line_start\\": 37,
            \\"suggested_replacement\\": null,
            \\"suggestion_applicability\\": null,
            \\"text\\": [
                {
                    \\"highlight_end\\": 26,
                    \\"highlight_start\\": 25,
                    \\"text\\": \\"    if { let b = false; b } {}\\"
                }
            ]
        }
    ]
}",
        "start_line": 37,
      },
      Object {
        "annotation_level": "failure",
        "end_line": 51,
        "message": "\`assert!(true)\` will be optimized out by the compiler",
        "path": "Cargo.toml",
        "raw_details": "{
    \\"rendered\\": \\"warning: \`assert!(true)\` will be optimized out by the compiler\\\\n  --> src/main.rs:51:9\\\\n   |\\\\n51 |         assert!(true);\\\\n   |         ^^^^^^^^^^^^^^\\\\n   |\\\\n   = note: \`#[warn(clippy::assertions_on_constants)]\` on by default\\\\n   = help: remove it\\\\n   = help: for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#assertions_on_constants\\\\n   = note: this warning originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)\\\\n\\\\n\\",
    \\"children\\": [
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"note\\",
            \\"message\\": \\"\`#[warn(clippy::assertions_on_constants)]\` on by default\\",
            \\"rendered\\": null,
            \\"spans\\": []
        },
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"help\\",
            \\"message\\": \\"remove it\\",
            \\"rendered\\": null,
            \\"spans\\": []
        },
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"help\\",
            \\"message\\": \\"for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#assertions_on_constants\\",
            \\"rendered\\": null,
            \\"spans\\": []
        }
    ],
    \\"code\\": {
        \\"code\\": \\"clippy::assertions_on_constants\\",
        \\"explanation\\": null
    },
    \\"level\\": \\"warning\\",
    \\"message\\": \\"\`assert!(true)\` will be optimized out by the compiler\\",
    \\"spans\\": [
        {
            \\"byte_end\\": 603,
            \\"byte_start\\": 589,
            \\"column_end\\": 23,
            \\"column_start\\": 9,
            \\"expansion\\": {
                \\"def_site_span\\": {
                    \\"byte_end\\": 41339,
                    \\"byte_start\\": 41183,
                    \\"column_end\\": 6,
                    \\"column_start\\": 5,
                    \\"expansion\\": null,
                    \\"file_name\\": \\"/home/user/.rustup/toolchains/1.49.0-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/macros/mod.rs\\",
                    \\"is_primary\\": false,
                    \\"label\\": null,
                    \\"line_end\\": 1221,
                    \\"line_start\\": 1218,
                    \\"suggested_replacement\\": null,
                    \\"suggestion_applicability\\": null,
                    \\"text\\": [
                        {
                            \\"highlight_end\\": 1,
                            \\"highlight_start\\": 5,
                            \\"text\\": \\"    macro_rules! assert {\\"
                        },
                        {
                            \\"highlight_end\\": 1,
                            \\"highlight_start\\": 1,
                            \\"text\\": \\"        ($cond:expr $(,)?) => {{ /* compiler built-in */ }};\\"
                        },
                        {
                            \\"highlight_end\\": 1,
                            \\"highlight_start\\": 1,
                            \\"text\\": \\"        ($cond:expr, $($arg:tt)+) => {{ /* compiler built-in */ }};\\"
                        },
                        {
                            \\"highlight_end\\": 6,
                            \\"highlight_start\\": 1,
                            \\"text\\": \\"    }\\"
                        }
                    ]
                },
                \\"macro_decl_name\\": \\"assert!\\",
                \\"span\\": {
                    \\"byte_end\\": 603,
                    \\"byte_start\\": 589,
                    \\"column_end\\": 23,
                    \\"column_start\\": 9,
                    \\"expansion\\": null,
                    \\"file_name\\": \\"src/main.rs\\",
                    \\"is_primary\\": false,
                    \\"label\\": null,
                    \\"line_end\\": 51,
                    \\"line_start\\": 51,
                    \\"suggested_replacement\\": null,
                    \\"suggestion_applicability\\": null,
                    \\"text\\": [
                        {
                            \\"highlight_end\\": 23,
                            \\"highlight_start\\": 9,
                            \\"text\\": \\"        assert!(true);\\"
                        }
                    ]
                }
            },
            \\"file_name\\": \\"src/main.rs\\",
            \\"is_primary\\": true,
            \\"label\\": null,
            \\"line_end\\": 51,
            \\"line_start\\": 51,
            \\"suggested_replacement\\": null,
            \\"suggestion_applicability\\": null,
            \\"text\\": [
                {
                    \\"highlight_end\\": 23,
                    \\"highlight_start\\": 9,
                    \\"text\\": \\"        assert!(true);\\"
                }
            ]
        }
    ]
}",
        "start_line": 51,
      },
      Object {
        "annotation_level": "failure",
        "end_line": 56,
        "message": "\`assert!(false)\` should probably be replaced",
        "path": "Cargo.toml",
        "raw_details": "{
    \\"rendered\\": \\"warning: \`assert!(false)\` should probably be replaced\\\\n  --> src/main.rs:56:5\\\\n   |\\\\n56 |     assert!(false);\\\\n   |     ^^^^^^^^^^^^^^^\\\\n   |\\\\n   = help: use \`panic!()\` or \`unreachable!()\`\\\\n   = help: for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#assertions_on_constants\\\\n   = note: this warning originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)\\\\n\\\\n\\",
    \\"children\\": [
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"help\\",
            \\"message\\": \\"use \`panic!()\` or \`unreachable!()\`\\",
            \\"rendered\\": null,
            \\"spans\\": []
        },
        {
            \\"children\\": [],
            \\"code\\": null,
            \\"level\\": \\"help\\",
            \\"message\\": \\"for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#assertions_on_constants\\",
            \\"rendered\\": null,
            \\"spans\\": []
        }
    ],
    \\"code\\": {
        \\"code\\": \\"clippy::assertions_on_constants\\",
        \\"explanation\\": null
    },
    \\"level\\": \\"warning\\",
    \\"message\\": \\"\`assert!(false)\` should probably be replaced\\",
    \\"spans\\": [
        {
            \\"byte_end\\": 660,
            \\"byte_start\\": 645,
            \\"column_end\\": 20,
            \\"column_start\\": 5,
            \\"expansion\\": {
                \\"def_site_span\\": {
                    \\"byte_end\\": 41339,
                    \\"byte_start\\": 41183,
                    \\"column_end\\": 6,
                    \\"column_start\\": 5,
                    \\"expansion\\": null,
                    \\"file_name\\": \\"/home/user/.rustup/toolchains/1.49.0-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/macros/mod.rs\\",
                    \\"is_primary\\": false,
                    \\"label\\": null,
                    \\"line_end\\": 1221,
                    \\"line_start\\": 1218,
                    \\"suggested_replacement\\": null,
                    \\"suggestion_applicability\\": null,
                    \\"text\\": [
                        {
                            \\"highlight_end\\": 26,
                            \\"highlight_start\\": 5,
                            \\"text\\": \\"    macro_rules! assert {\\"
                        },
                        {
                            \\"highlight_end\\": 61,
                            \\"highlight_start\\": 1,
                            \\"text\\": \\"        ($cond:expr $(,)?) => {{ /* compiler built-in */ }};\\"
                        },
                        {
                            \\"highlight_end\\": 68,
                            \\"highlight_start\\": 1,
                            \\"text\\": \\"        ($cond:expr, $($arg:tt)+) => {{ /* compiler built-in */ }};\\"
                        },
                        {
                            \\"highlight_end\\": 6,
                            \\"highlight_start\\": 1,
                            \\"text\\": \\"    }\\"
                        }
                    ]
                },
                \\"macro_decl_name\\": \\"assert!\\",
                \\"span\\": {
                    \\"byte_end\\": 660,
                    \\"byte_start\\": 645,
                    \\"column_end\\": 20,
                    \\"column_start\\": 5,
                    \\"expansion\\": null,
                    \\"file_name\\": \\"src/main.rs\\",
                    \\"is_primary\\": false,
                    \\"label\\": null,
                    \\"line_end\\": 56,
                    \\"line_start\\": 56,
                    \\"suggested_replacement\\": null,
                    \\"suggestion_applicability\\": null,
                    \\"text\\": [
                        {
                            \\"highlight_end\\": 20,
                            \\"highlight_start\\": 5,
                            \\"text\\": \\"    assert!(false);\\"
                        }
                    ]
                }
            },
            \\"file_name\\": \\"src/main.rs\\",
            \\"is_primary\\": true,
            \\"label\\": null,
            \\"line_end\\": 56,
            \\"line_start\\": 56,
            \\"suggested_replacement\\": null,
            \\"suggestion_applicability\\": null,
            \\"text\\": [
                {
                    \\"highlight_end\\": 20,
                    \\"highlight_start\\": 5,
                    \\"text\\": \\"    assert!(false);\\"
                }
            ]
        }
    ]
}",
        "start_line": 56,
      },
    ],
    "summary": "Total of 12 issues",
    "text": "## Results

| Message level           | Amount |
| ----------------------- | ------ |
| Internal compiler error |      0 |
| Error                   |      2 |
| Warning                 |     10 |
| Note                    |      0 |
| Help                    |      0 |",
    "title": "Total of 12 issues",
  },
  "status": "completed",
}
`;

exports[`checks/cargo-clippy converts successful cargo-clippy 1`] = `
Object {
  "completed_at": Any<String>,
  "conclusion": "success",
  "head_sha": "11963e3cb7ecbb9247f638cc0fb047173a62cf7a",
  "name": "cargo-clippy",
  "output": Object {
    "annotations": Array [],
    "summary": "Found no issues",
    "title": "Found no issues",
  },
  "status": "completed",
}
`;
